# OOTPISP-2023

./: README.md
trunk/PO-9_210656/lab4/src/: main.cpp
trunk/PO-9_210665/task_01/: README.md
trunk/PO-9_210665/task_01/src/: CMakeLists.txt  gg.cpp  gg.h  mainwindow.cpp  mainwindow.h
trunk/PO-9_210665/task_02/: README.md
trunk/PO-9_210665/task_02/src/: CMakeLists.txt  main.cpp  texteditor.cpp  texteditor.h
trunk/PO-9_210665/task_03/: README.md
trunk/PO-9_210665/task_03/src/: CMakeLists.txt  form1.cpp  form1.h  form1.ui
trunk/PO-9_210665/task_04/: README.md
trunk/PO-9_210665/task_05/: README.md
trunk/PO-9_210665/task_06/: README.md
trunk/PO-9_210665/task_06/src/: AbstractFactory.h  CMakeLists.txt
trunk/PO-9_210665/task_08/: README.md
trunk/PO-9_210665/task_08/src/: CMakeLists.txt  customwidget.cpp  customwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
